compiler/tools/fpp-check/test/expr/dot_bad_expr.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/expr/dot_bad_expr.fpp:1.14
constant a = { x = 1 }.x
             ^
error: invalid expression: expression does not refer to a definition
